tests/baselines/reference/classAbstractImportInstantiation.errors.txt
classAbstractImportInstantiation.ts(4,5): error TS2511: Cannot create an instance of an abstract class.
classAbstractImportInstantiation.ts(9,1): error TS2511: Cannot create an instance of an abstract class.


==== classAbstractImportInstantiation.ts (2 errors) ====
    module M {
        export abstract class A {}
        
        new A;
        ~~~~~
!!! error TS2511: Cannot create an instance of an abstract class.
    }
    
    import myA = M.A;
    
    new myA;
    ~~~~~~~
!!! error TS2511: Cannot create an instance of an abstract class.
    